# asyncapi_discovery

./: .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  PROJECT_SETUP_SUMMARY.md  README-claude.MD  README.md  catalog_manager.py  config-from-claude.json  config.json  demo.py  event_detector.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sourcegraph_client.py
.github/workflows/: ci.yml  github-actions-workflow.yml  publish.yml
docs/: IMPLEMENTATION_GUIDE.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  visual-directory-structure.md
examples/: README.md  catalog-summary.md  payment-service.yaml  simple_usage.py
src/asyncapi_discovery/: __init__.py  asynapi_generator.py  catalog_manager.py  cli.py  demo.py  discovery.py  generator.py  scanner.py  schema_enrichment.py
tests/: __init__.py  test_discovery.py  test_generator.py  test_scanner.py
